[gd_scene load_steps=9 format=2]

[ext_resource path="res://Action RPG/Action RPG Resources/World/HandAttack1.gd" type="Script" id=1]
[ext_resource path="res://launch_screen/Arm1.png" type="Texture" id=2]
[ext_resource path="res://Action RPG/Action RPG Resources/Player/PlayerV4/PlayerV4.tscn" type="PackedScene" id=3]
[ext_resource path="res://Action RPG/Action RPG Resources/Player/PlayerV4/Arrow.png" type="Texture" id=4]
[ext_resource path="res://Action RPG/Action RPG Resources/World/Arrow.gd" type="Script" id=5]

[sub_resource type="Animation" id=3]
resource_name = "HandAttack2"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite3:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -12, -0.25, 0, 0.25, 0, 13, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite3:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 160, -0.25, 0, 0.25, 0, 116, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite5:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 224, -0.25, 0, 0.25, 0, 153, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite5:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -62, -0.25, 0, 0.25, 0, -31, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprite6:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 61, -0.25, 0, 0.25, 0, 93, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprite6:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 78, -0.25, 0, 0.25, 0, 120, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -18, 212 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite3:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -18, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite3:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 212, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Sprite5:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 196, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Sprite5:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Sprite6:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 168, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Sprite6:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 113, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "dissolve"
length = 1.2

[node name="HandAttack1" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HandAttack2 = SubResource( 3 )
anims/RESET = SubResource( 1 )
anims/dissolve = SubResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 196, -25 )
texture = ExtResource( 2 )
offset = Vector2( 31, -31 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 168, 113 )
texture = ExtResource( 2 )
offset = Vector2( 30, -30 )

[node name="PlayerV4" parent="." instance=ExtResource( 3 )]
position = Vector2( 63, 38 )

[node name="GrimyArrow" type="Sprite" parent="."]
visible = false
position = Vector2( 33, 70 )
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -18, 212 )
texture = ExtResource( 2 )
offset = Vector2( 31, -31 )
